--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>B13-A02-TechWave</title>
+
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    
+    <img src="./assets/apple-podcast.png" alt="">
 </body>
 </html>
