--- a/index.html
+++ b/index.html
@@ -5,23 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>B13-A02-TechWave</title>
 
-    <link tailwindcss href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+
 
     <link rel="stylesheet" href="./style.css">
 </head>
-<body>
+<body class="font-open-sans">
+
     <header>
         <nav>
-            <div>
-                <h2>TechWave</h2>
+            <div class="logo">
+                <h2><span class="color white">Tech</span><span class="color linear">Wave</span></h2>
             </div>
+
             <ul>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Episodes</a></li>
                 <li><a href="#">Host</a></li>
+                </ul>
+            <ul>
+                <li><button class="btn">Subscribe</button></li>
             </ul>
-            <button>Subscribe</button>
-        </nav>
+            </nav>
     </header>
 </body>
 </html>
